# swissgeol-viewer-app

./: .browserslistrc  .editorconfig  .env  .eslintrc.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mocharc.js  .scrum  .sentryclirc  CHANGELOG.md  Cargo.toml  DEPLOY_ABBREVIATOR.md  DEPLOY_VIEWER.md  DEVELOPING.md  DOCU_CESIUM_ION_LABELS.md  LICENSE  Makefile  README-new.md  README.md  docker-compose-tests.yaml  docker-compose.yaml  i18next-parser.config.js  index.html  jsconfig.json  package-lock.json  package.json  rollup.config.js  secrets.txt.gpg  serverless-dev.yml  serverless.yml  tsconfig.json  vite.config.ts  webpack.config.js
.github/: renovate.json5
.storybook/: main.cjs
api/: .dockerignore  .env  Cargo.toml  Dockerfile  DockerfileDev  DockerfileDevMac  README.md  sqlx-data.json  start.sh
api/.sqlx/: query-26e3a417a053583de1cf622eb1ac12e01b99434f81a8f4d27a30c6a83e1bba96.json  query-2a6e57347e722fa816878abb646721e312bca857b29ddec55cd565fc1cabf857.json  query-5c4b5175d59b4d6c8fee6f823c3a7cbdbdb18f355ddf32cad8b85e6e149a7c0b.json  query-71bdd5dcfcd2696b51c9215fb0c8fd26afdaf208f90158addffe4aef79e80f17.json  query-c246b6a26229dc61a3585ff27345639ed820e9dd0461fa763e1e9f55dc515b24.json  query-d6b94b343f9ea808e92cec54b5a837f7e93b35e7e7e335bcc62debd40d0209d6.json
api/migrations/: 20220209095653_initialization.sql  20220210140852_initialization.down.sql  20220210140852_initialization.up.sql  20231208113111_members_info.down.sql  20231208113111_members_info.up.sql  20231212145258_rename_members_to_editors.down.sql  20231212145258_rename_members_to_editors.up.sql
api/scripts/: init_db.sh  release_api.sh  wait_db.sh
api/src/: auth.rs  cognito.rs  config.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  s3.rs  stub.rs
api/tests/: basic.rs  cognito.rs
cypress/: tsconfig.json
k8s/: .gitignore  Chart.yaml  README.md  secrets.template.yaml  values.template.yaml
legal/: index.css  legal_de.md  legal_en.md  legal_fr.md  legal_it.md  template.html
locales/: README.MD  app.de.json  app.en.json  app.fr.json  app.it.json  assets.de.json  assets.en.json  assets.fr.json  assets.it.json  de.json  en.json  fr.json  it.json  rm.json
manuals/: manual.html  manual_base.html  manual_de.html  manual_en.html  style.css
public/: Assets  Workers
scripts/: create_versions.sh  deploy-to-env.sh  deploySentrySourcemaps.js  deploy_to_prod.sh  deploy_to_prod_viewer.sh  deploy_to_s3.sh  deploy_viewer.sh  environment.js  fetch_earthquakes.sh  generateManuals.cjs  generateManuals.js  get_api_logs.sh  get_assets_properties.js  get_github_name.sh  github_add_link_for_reviews.sh  github_deploy.sh  gitlab_add_link_for_reviews.sh  gitlab_deploy.sh  legal_md_to_html.sh  npm_postinstall.sh  release_api.sh  release_ui.sh
src/: AmazonS3Resource.js  AreaOfInterestDrawer.js  CognitoResource.js  FirstPersonCameraMode.js  KeyboardNavigation.js  LimitCameraHeightToDepth.js  LocalStorageController.js  LocalStorageController.ts  MapChooser.js  MapChooser.ts  NavigableVolumeLimiter.js  ObjectSelector.js  Slicer.js  SurfaceColorUpdater.js  analytics.js  assets_properties.js  auth.js  auth.ts  aws-sdk-2.716.0.min.js  aws-sdk-2.727.1.js  cesiumutils.js  cesiumutils.ts  constants.js  constants.ts  download.js  download.ts  drop.js  graphs.ts  gst.js  gst.ts  i18n.js  index.css  index.js  index.ts  jquery.js  layers.js  layertree.js  layertree.ts  message.js  ngm-app.js  (+17 more)
test/: auth.test.js  download.test.js  download.test.ts
tests/: test_deploy_to_s3.sh  test_gitlab_deploy.sh
ui/: .browserslistrc  .eslintrc.yml  .gitignore  .mocharc.json  .prettierignore  .prettierrc  .proxyrc.json  ARCHITECTURE.md  Dockerfile  DockerfileDev  Makefile  UI_GUIDELINES.md  cypress.config.ts  eslint.config.mjs  i18next-parser.config.cjs  i18next-scanner.config.cjs  index.html  jsconfig.json  log_i18next.json  package-lock.json  package.json  rollup.config.js  security.txt  start.sh  tsconfig.json  tsconfig.test.json  vite.config.ts  webpack.config.js
(+601 files in other folders)
