[package]
name = "api"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Config
clap = { version = "4.0.30", features = ["derive", "env"]}
dotenv = "0.15.0"
structopt = "0.3"

# Web
axum = { version = "0.6.1", features = ["headers"] }
axum-macros = "0.3.0"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "offline", "uuid", "time"] }

# AWS
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"

# Serialization
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version="0.3.16", features = ["env-filter"] }

# Errors
anyhow = "1.0.68"
thiserror = "1.0.38"

# Utils
chrono = { version = "0.4.23", features = ["serde"]}
once_cell = "1.16.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "hyper-rustls", "json"]}
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jsonwebtoken = "8.2.0"
