[package]
name = "api"
version = "0.1.1"
edition = "2021"
rust-version = "1.73"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Config
clap = { version = "4.4.7", features = ["derive", "env"]}
dotenv = "0.15.0"
structopt = "0.3"

# Web
axum = { version = "0.6.20", features = ["headers"] }
axum-macros = "0.3.8"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline", "uuid", "time"] }

# AWS
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"

# Serialization
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version="0.3.17", features = ["env-filter"] }

# Errors
anyhow = "1.0.75"
thiserror = "1.0.50"

# Utils
chrono = { version = "0.4.31", features = ["serde"]}
once_cell = "1.18.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "hyper-rustls", "json"]}
url = "2.4.1"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
jsonwebtoken = "8.3.0"
