[package]
name = "api"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Config
clap = { version = "4.5.12", features = ["derive", "env"]}
dotenv = "0.15.0"
structopt = "0.3"

# Async
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
axum-macros = "0.4.2"
hyper = { version = "1.5.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }

# AWS
aws-config = "1.5"
aws-sdk-s3 = "1.61"

# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["env-filter"] }

# Errors
anyhow = "1.0"
thiserror = "2.0"

# Utils
chrono = { version = "0.4", features = ["serde"]}
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"]}
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }
jsonwebtoken = "9.3"
rand = "0.8"
